--- a/react/crud/frontend/package.json
+++ b/react/crud/frontend/package.json
@@ -9,10 +9,10 @@
     "axios": "0.18.0",
     "bootstrap": "5.1.3",
     "font-awesome": "4.7.0",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router": "4.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
